Started adding code for scraping sections of a workload.

--- a/VsDownloader/VsDownloader.csproj
+++ b/VsDownloader/VsDownloader.csproj
@@ -75,6 +75,7 @@
     </Compile>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Models\LanguageModel.cs" />
+    <Compile Include="Models\SectionModel.cs" />
     <Compile Include="Models\ProductEditionModel.cs" />
     <Compile Include="Models\WorkloadModel.cs" />
     <Compile Include="Models\ComponentModel.cs" />
